--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -793,6 +793,18 @@ img {
   background-color: rgb(203 213 225 / var(--tw-bg-opacity));
 }
 
+.sr-only{
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
 .pointer-events-none{
   pointer-events: none;
 }
@@ -851,16 +863,16 @@ img {
   top: 1.25rem;
 }
 
+.top-10{
+  top: 2.5rem;
+}
+
 .top-3{
   top: 0.75rem;
 }
 
 .right-3{
   right: 0.75rem;
-}
-
-.top-10{
-  top: 2.5rem;
 }
 
 .-right-3{
@@ -887,6 +899,10 @@ img {
   right: 1rem;
 }
 
+.right-2{
+  right: 0.5rem;
+}
+
 .top-2{
   top: 0.5rem;
 }
@@ -895,20 +911,32 @@ img {
   left: 0.75rem;
 }
 
-.right-2{
-  right: 0.5rem;
+.top-6{
+  top: 1.5rem;
+}
+
+.top-7{
+  top: 1.75rem;
+}
+
+.top-9{
+  top: 2.25rem;
+}
+
+.top-20{
+  top: 5rem;
 }
 
 .z-10{
   z-index: 10;
 }
 
-.z-30{
-  z-index: 30;
-}
-
 .z-40{
   z-index: 40;
+}
+
+.z-30{
+  z-index: 30;
 }
 
 .z-\[3\]{
@@ -978,6 +1006,10 @@ img {
   margin-bottom: 0.75rem;
 }
 
+.mt-8{
+  margin-top: 2rem;
+}
+
 .mb-12{
   margin-bottom: 3rem;
 }
@@ -988,10 +1020,6 @@ img {
 
 .mt-4{
   margin-top: 1rem;
-}
-
-.mt-8{
-  margin-top: 2rem;
 }
 
 .mt-10{
@@ -1058,6 +1086,10 @@ img {
   margin-top: 0.25rem;
 }
 
+.mt-9{
+  margin-top: 2.25rem;
+}
+
 .block{
   display: block;
 }
@@ -1110,6 +1142,10 @@ img {
   height: 3.5rem;
 }
 
+.h-12{
+  height: 3rem;
+}
+
 .h-3\/4{
   height: 75%;
 }
@@ -1118,16 +1154,12 @@ img {
   height: 2.25rem;
 }
 
-.h-64{
-  height: 16rem;
+.h-screen{
+  height: 100vh;
 }
 
 .h-96{
   height: 24rem;
-}
-
-.h-screen{
-  height: 100vh;
 }
 
 .h-7{
@@ -1146,28 +1178,40 @@ img {
   height: 1.25rem;
 }
 
+.h-6{
+  height: 1.5rem;
+}
+
 .h-40{
   height: 10rem;
 }
 
-.h-6{
-  height: 1.5rem;
+.h-64{
+  height: 16rem;
+}
+
+.h-44{
+  height: 11rem;
+}
+
+.h-20{
+  height: 5rem;
 }
 
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
 }
 
-.max-h-96{
-  max-height: 24rem;
+.max-h-40{
+  max-height: 10rem;
 }
 
 .max-h-56{
   max-height: 14rem;
 }
 
-.max-h-40{
-  max-height: 10rem;
+.max-h-96{
+  max-height: 24rem;
 }
 
 .min-h-screen{
@@ -1176,10 +1220,6 @@ img {
 
 .min-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   min-height: calc(100vh - 4rem);
-}
-
-.min-h-full{
-  min-height: 100%;
 }
 
 .w-28{
@@ -1202,6 +1242,10 @@ img {
   width: 3.5rem;
 }
 
+.w-72{
+  width: 18rem;
+}
+
 .w-3\/4{
   width: 75%;
 }
@@ -1210,20 +1254,16 @@ img {
   width: 33.333333%;
 }
 
-.w-72{
-  width: 18rem;
-}
-
-.w-3\/5{
-  width: 60%;
+.w-1\/2{
+  width: 50%;
 }
 
 .w-96{
   width: 24rem;
 }
 
-.w-1\/2{
-  width: 50%;
+.w-3\/5{
+  width: 60%;
 }
 
 .w-7{
@@ -1250,6 +1290,10 @@ img {
   width: 1.25rem;
 }
 
+.w-24{
+  width: 6rem;
+}
+
 .w-40{
   width: 10rem;
 }
@@ -1258,8 +1302,16 @@ img {
   width: 3rem;
 }
 
-.w-24{
-  width: 6rem;
+.w-44{
+  width: 11rem;
+}
+
+.w-10{
+  width: 2.5rem;
+}
+
+.w-2{
+  width: 0.5rem;
 }
 
 .min-w-full{
@@ -1270,12 +1322,12 @@ img {
   min-width: 1000px;
 }
 
-.max-w-sm{
-  max-width: 24rem;
-}
-
 .max-w-full{
   max-width: 100%;
+}
+
+.max-w-sm{
+  max-width: 24rem;
 }
 
 .flex-none{
@@ -1367,12 +1419,12 @@ img {
           animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
-.cursor-pointer{
-  cursor: pointer;
-}
-
 .cursor-not-allowed{
   cursor: not-allowed;
+}
+
+.cursor-pointer{
+  cursor: pointer;
 }
 
 .select-none{
@@ -1398,6 +1450,10 @@ img {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
+.flex-row{
+  flex-direction: row;
+}
+
 .flex-col{
   flex-direction: column;
 }
@@ -1414,10 +1470,6 @@ img {
   align-items: center;
 }
 
-.items-stretch{
-  align-items: stretch;
-}
-
 .justify-end{
   justify-content: flex-end;
 }
@@ -1430,28 +1482,28 @@ img {
   justify-content: space-between;
 }
 
-.gap-10{
-  gap: 2.5rem;
+.gap-20{
+  gap: 5rem;
 }
 
 .gap-4{
   gap: 1rem;
 }
 
+.gap-10{
+  gap: 2.5rem;
+}
+
 .gap-2{
   gap: 0.5rem;
 }
 
-.gap-20{
-  gap: 5rem;
+.gap-6{
+  gap: 1.5rem;
 }
 
 .gap-12{
   gap: 3rem;
-}
-
-.gap-6{
-  gap: 1.5rem;
 }
 
 .gap-5{
@@ -1466,12 +1518,12 @@ img {
   gap: 2rem;
 }
 
-.gap-7{
-  gap: 1.75rem;
-}
-
 .gap-1{
   gap: 0.25rem;
+}
+
+.gap-7{
+  gap: 1.75rem;
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]){
@@ -1493,10 +1545,6 @@ img {
 .divide-gray-200 > :not([hidden]) ~ :not([hidden]){
   --tw-divide-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-divide-opacity));
-}
-
-.self-stretch{
-  align-self: stretch;
 }
 
 .overflow-auto{
@@ -1525,16 +1573,16 @@ img {
   white-space: nowrap;
 }
 
-.rounded-lg{
-  border-radius: 0.5rem;
+.rounded-2xl{
+  border-radius: 1rem;
 }
 
 .rounded{
   border-radius: 0.25rem;
 }
 
-.rounded-2xl{
-  border-radius: 1rem;
+.rounded-lg{
+  border-radius: 0.5rem;
 }
 
 .rounded-full{
@@ -1598,12 +1646,12 @@ img {
   border-right-width: 1px;
 }
 
-.border-b-2{
-  border-bottom-width: 2px;
-}
-
 .border-t-2{
   border-top-width: 2px;
+}
+
+.border-b-2{
+  border-bottom-width: 2px;
 }
 
 .border-l-2{
@@ -1662,9 +1710,19 @@ img {
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
 }
 
+.border-red-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(248 113 113 / var(--tw-border-opacity));
+}
+
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-blue-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 
 .bg-gray-50{
@@ -1682,14 +1740,13 @@ img {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
-.bg-blue-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-
 .bg-sky-500{
   --tw-bg-opacity: 1;
   background-color: rgb(14 165 233 / var(--tw-bg-opacity));
+}
+
+.bg-black\/70{
+  background-color: rgb(0 0 0 / 0.7);
 }
 
 .bg-zinc-900{
@@ -1700,10 +1757,6 @@ img {
 .bg-zinc-800{
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity));
-}
-
-.bg-black\/70{
-  background-color: rgb(0 0 0 / 0.7);
 }
 
 .bg-red-100{
@@ -1735,16 +1788,6 @@ img {
   background-color: rgb(17 24 39 / 0.5);
 }
 
-.bg-slate-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
-}
-
-.bg-sky-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 249 255 / var(--tw-bg-opacity));
-}
-
 .bg-slate-100{
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
@@ -1758,6 +1801,31 @@ img {
 .bg-sky-100{
   --tw-bg-opacity: 1;
   background-color: rgb(224 242 254 / var(--tw-bg-opacity));
+}
+
+.bg-sky-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 249 255 / var(--tw-bg-opacity));
+}
+
+.bg-slate-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+
+.bg-orange-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 186 116 / var(--tw-bg-opacity));
+}
+
+.bg-red-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-red-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
 .object-contain{
@@ -1790,17 +1858,12 @@ img {
   padding: 0px;
 }
 
-.p-2{
-  padding: 0.5rem;
-}
-
 .p-1{
   padding: 0.25rem;
 }
 
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.p-2{
+  padding: 0.5rem;
 }
 
 .py-4{
@@ -1808,29 +1871,9 @@ img {
   padding-bottom: 1rem;
 }
 
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-}
-
-.px-10{
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
-.py-10{
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .py-1{
@@ -1841,6 +1884,16 @@ img {
 .py-16{
   padding-top: 4rem;
   padding-bottom: 4rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .px-1{
@@ -1858,14 +1911,29 @@ img {
   padding-bottom: 0px;
 }
 
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-24{
   padding-top: 6rem;
   padding-bottom: 6rem;
+}
+
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-6{
@@ -1898,16 +1966,21 @@ img {
   padding-bottom: 0.625rem;
 }
 
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.pb-3{
+  padding-bottom: 0.75rem;
+}
+
 .pb-4{
   padding-bottom: 1rem;
 }
 
 .pt-4{
   padding-top: 1rem;
-}
-
-.pb-3{
-  padding-bottom: 0.75rem;
 }
 
 .pt-3{
@@ -1926,22 +1999,6 @@ img {
   padding-left: 1rem;
 }
 
-.pt-10{
-  padding-top: 2.5rem;
-}
-
-.pb-8{
-  padding-bottom: 2rem;
-}
-
-.pt-8{
-  padding-top: 2rem;
-}
-
-.pb-6{
-  padding-bottom: 1.5rem;
-}
-
 .pt-28{
   padding-top: 7rem;
 }
@@ -1956,6 +2013,22 @@ img {
 
 .pt-14{
   padding-top: 3.5rem;
+}
+
+.pt-10{
+  padding-top: 2.5rem;
+}
+
+.pb-8{
+  padding-bottom: 2rem;
+}
+
+.pt-8{
+  padding-top: 2rem;
+}
+
+.pb-6{
+  padding-bottom: 1.5rem;
 }
 
 .pt-1{
@@ -1978,10 +2051,6 @@ img {
   padding-right: 1.25rem;
 }
 
-.pl-11{
-  padding-left: 2.75rem;
-}
-
 .pr-9{
   padding-right: 2.25rem;
 }
@@ -1992,6 +2061,14 @@ img {
 
 .pr-4{
   padding-right: 1rem;
+}
+
+.pl-11{
+  padding-left: 2.75rem;
+}
+
+.pl-10{
+  padding-left: 2.5rem;
 }
 
 .text-left{
@@ -2014,24 +2091,14 @@ img {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
 }
 
 .text-3xl{
@@ -2044,14 +2111,19 @@ img {
   line-height: 1rem;
 }
 
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 
 .text-5xl{
@@ -2059,20 +2131,25 @@ img {
   line-height: 1;
 }
 
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .font-medium{
   font-weight: 500;
 }
 
-.font-semibold{
-  font-weight: 600;
+.font-normal{
+  font-weight: 400;
 }
 
 .font-light{
   font-weight: 300;
 }
 
-.font-normal{
-  font-weight: 400;
+.font-semibold{
+  font-weight: 600;
 }
 
 .font-thin{
@@ -2087,24 +2164,9 @@ img {
   letter-spacing: 0.05em;
 }
 
-.text-zinc-800{
-  --tw-text-opacity: 1;
-  color: rgb(39 39 42 / var(--tw-text-opacity));
-}
-
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-zinc-400{
-  --tw-text-opacity: 1;
-  color: rgb(161 161 170 / var(--tw-text-opacity));
-}
-
-.text-zinc-700{
-  --tw-text-opacity: 1;
-  color: rgb(63 63 70 / var(--tw-text-opacity));
 }
 
 .text-zinc-600{
@@ -2117,29 +2179,24 @@ img {
   color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
+.text-zinc-700{
+  --tw-text-opacity: 1;
+  color: rgb(63 63 70 / var(--tw-text-opacity));
+}
+
+.text-zinc-800{
+  --tw-text-opacity: 1;
+  color: rgb(39 39 42 / var(--tw-text-opacity));
+}
+
+.text-zinc-400{
+  --tw-text-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-text-opacity));
+}
+
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.text-orange-500{
-  --tw-text-opacity: 1;
-  color: rgb(249 115 22 / var(--tw-text-opacity));
-}
-
-.text-gray-600{
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
-.text-gray-900{
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
-.text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-zinc-900{
@@ -2162,24 +2219,19 @@ img {
   color: rgb(2 132 199 / var(--tw-text-opacity));
 }
 
-.text-rose-600{
+.text-orange-500{
   --tw-text-opacity: 1;
-  color: rgb(225 29 72 / var(--tw-text-opacity));
+  color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 
-.text-amber-500{
+.text-gray-600{
   --tw-text-opacity: 1;
-  color: rgb(245 158 11 / var(--tw-text-opacity));
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
-.text-purple-600{
+.text-gray-900{
   --tw-text-opacity: 1;
-  color: rgb(147 51 234 / var(--tw-text-opacity));
-}
-
-.text-green-600{
-  --tw-text-opacity: 1;
-  color: rgb(22 163 74 / var(--tw-text-opacity));
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
 .text-slate-50{
@@ -2212,14 +2264,9 @@ img {
   color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
 }
 
-.text-gray-400{
+.text-red-500{
   --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
-.text-sky-500{
-  --tw-text-opacity: 1;
-  color: rgb(14 165 233 / var(--tw-text-opacity));
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-green-500{
@@ -2227,9 +2274,9 @@ img {
   color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
-.text-gray-300{
+.text-sky-500{
   --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
+  color: rgb(14 165 233 / var(--tw-text-opacity));
 }
 
 .text-yellow-800{
@@ -2245,6 +2292,60 @@ img {
 .text-green-700{
   --tw-text-opacity: 1;
   color: rgb(21 128 61 / var(--tw-text-opacity));
+}
+
+.text-gray-300{
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+.text-gray-400{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-rose-600{
+  --tw-text-opacity: 1;
+  color: rgb(225 29 72 / var(--tw-text-opacity));
+}
+
+.text-amber-500{
+  --tw-text-opacity: 1;
+  color: rgb(245 158 11 / var(--tw-text-opacity));
+}
+
+.text-green-600{
+  --tw-text-opacity: 1;
+  color: rgb(22 163 74 / var(--tw-text-opacity));
+}
+
+.text-purple-600{
+  --tw-text-opacity: 1;
+  color: rgb(147 51 234 / var(--tw-text-opacity));
+}
+
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-orange-400{
+  --tw-text-opacity: 1;
+  color: rgb(251 146 60 / var(--tw-text-opacity));
+}
+
+.text-orange-300{
+  --tw-text-opacity: 1;
+  color: rgb(253 186 116 / var(--tw-text-opacity));
+}
+
+.text-red-400{
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
+}
+
+.text-opacity-60{
+  --tw-text-opacity: 0.6;
 }
 
 .underline{
@@ -2305,12 +2406,26 @@ img {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline{
   outline-style: solid;
 }
 
 .outline-2{
   outline-width: 2px;
+}
+
+.outline-1{
+  outline-width: 1px;
+}
+
+.outline-0{
+  outline-width: 0px;
 }
 
 .outline-offset-1{
@@ -2323,6 +2438,18 @@ img {
 
 .outline-zinc-400{
   outline-color: #a1a1aa;
+}
+
+.outline-orange-400{
+  outline-color: #fb923c;
+}
+
+.outline-orange-300{
+  outline-color: #fdba74;
+}
+
+.outline-red-400{
+  outline-color: #f87171;
 }
 
 .ring-2{
@@ -2367,12 +2494,12 @@ img {
   transition-duration: 150ms;
 }
 
-.duration-300{
-  transition-duration: 300ms;
-}
-
 .duration-500{
   transition-duration: 500ms;
+}
+
+.duration-300{
+  transition-duration: 300ms;
 }
 
 .duration-1000{
@@ -2506,19 +2633,19 @@ img {
   padding-right: 1rem;
 }
 
-.hover\:bg-slate-300:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-gray-50:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
-.hover\:text-blue-700:hover{
-  --tw-text-opacity: 1;
-  color: rgb(29 78 216 / var(--tw-text-opacity));
+.hover\:bg-slate-300:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-red-400:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
 .hover\:text-blue-600:hover{
@@ -2526,9 +2653,14 @@ img {
   color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
-.hover\:text-gray-600:hover{
+.hover\:text-blue-700:hover{
   --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
+  color: rgb(29 78 216 / var(--tw-text-opacity));
+}
+
+.hover\:text-sky-600:hover{
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
 }
 
 .hover\:text-gray-500:hover{
@@ -2536,9 +2668,19 @@ img {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
-.hover\:text-sky-600:hover{
+.hover\:text-gray-600:hover{
   --tw-text-opacity: 1;
-  color: rgb(2 132 199 / var(--tw-text-opacity));
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.hover\:text-white:hover{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:underline:hover{
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
 }
 
 .hover\:file\:bg-sky-100::-webkit-file-upload-button:hover{
@@ -2597,6 +2739,39 @@ img {
   opacity: 1;
 }
 
+@media (prefers-color-scheme: dark){
+
+  .dark\:border-gray-700{
+    --tw-border-opacity: 1;
+    border-color: rgb(55 65 81 / var(--tw-border-opacity));
+  }
+
+  .dark\:bg-gray-700{
+    --tw-bg-opacity: 1;
+    background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+  }
+
+  .dark\:bg-gray-800{
+    --tw-bg-opacity: 1;
+    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  }
+
+  .dark\:text-gray-400{
+    --tw-text-opacity: 1;
+    color: rgb(156 163 175 / var(--tw-text-opacity));
+  }
+
+  .dark\:text-white{
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+
+  .dark\:text-blue-500{
+    --tw-text-opacity: 1;
+    color: rgb(59 130 246 / var(--tw-text-opacity));
+  }
+}
+
 @media (min-width: 640px){
 
   .sm\:block{
@@ -2617,6 +2792,10 @@ img {
 
   .sm\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:rounded-lg{
+    border-radius: 0.5rem;
   }
 }
 
@@ -2710,6 +2889,14 @@ img {
     width: 20rem;
   }
 
+  .lg\:basis-96{
+    flex-basis: 24rem;
+  }
+
+  .lg\:basis-28{
+    flex-basis: 7rem;
+  }
+
   .lg\:scale-90{
     --tw-scale-x: .9;
     --tw-scale-y: .9;
@@ -2732,12 +2919,20 @@ img {
     flex-direction: row;
   }
 
+  .lg\:flex-col{
+    flex-direction: column;
+  }
+
   .lg\:items-center{
     align-items: center;
   }
 
   .lg\:justify-start{
     justify-content: flex-start;
+  }
+
+  .lg\:justify-end{
+    justify-content: flex-end;
   }
 
   .lg\:justify-between{
@@ -2768,6 +2963,16 @@ img {
   .lg\:px-10{
     padding-left: 2.5rem;
     padding-right: 2.5rem;
+  }
+
+  .lg\:py-3{
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .lg\:py-8{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
   }
 
   .lg\:pt-0{
