--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -851,16 +851,16 @@ img {
   top: 1.25rem;
 }
 
+.top-10{
+  top: 2.5rem;
+}
+
 .top-3{
   top: 0.75rem;
 }
 
 .right-3{
   right: 0.75rem;
-}
-
-.top-10{
-  top: 2.5rem;
 }
 
 .-right-3{
@@ -891,6 +891,10 @@ img {
   right: 1rem;
 }
 
+.right-2{
+  right: 0.5rem;
+}
+
 .top-2{
   top: 0.5rem;
 }
@@ -899,20 +903,16 @@ img {
   left: 0.75rem;
 }
 
-.right-2{
-  right: 0.5rem;
-}
-
 .z-10{
   z-index: 10;
 }
 
-.z-30{
-  z-index: 30;
-}
-
 .z-40{
   z-index: 40;
+}
+
+.z-30{
+  z-index: 30;
 }
 
 .z-\[3\]{
@@ -982,6 +982,10 @@ img {
   margin-bottom: 0.75rem;
 }
 
+.mt-8{
+  margin-top: 2rem;
+}
+
 .mb-12{
   margin-bottom: 3rem;
 }
@@ -994,6 +998,10 @@ img {
   margin-top: 1rem;
 }
 
+.mt-10{
+  margin-top: 2.5rem;
+}
+
 .mb-4{
   margin-bottom: 1rem;
 }
@@ -1002,16 +1010,8 @@ img {
   margin-top: 1.25rem;
 }
 
-.mt-8{
-  margin-top: 2rem;
-}
-
 .mt-auto{
   margin-top: auto;
-}
-
-.mt-10{
-  margin-top: 2.5rem;
 }
 
 .mt-9{
@@ -1066,6 +1066,10 @@ img {
   margin-top: 0.25rem;
 }
 
+.mb-8{
+  margin-bottom: 2rem;
+}
+
 .block{
   display: block;
 }
@@ -1118,14 +1122,6 @@ img {
   height: 3.5rem;
 }
 
-.h-3\/4{
-  height: 75%;
-}
-
-.h-9{
-  height: 2.25rem;
-}
-
 .h-64{
   height: 16rem;
 }
@@ -1138,12 +1134,12 @@ img {
   height: 9rem;
 }
 
-.h-96{
-  height: 24rem;
-}
-
 .h-screen{
   height: 100vh;
+}
+
+.h-96{
+  height: 24rem;
 }
 
 .h-12{
@@ -1162,28 +1158,32 @@ img {
   height: 1.25rem;
 }
 
-.h-40{
-  height: 10rem;
-}
-
 .h-6{
   height: 1.5rem;
+}
+
+.h-40{
+  height: 10rem;
 }
 
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
 }
 
-.max-h-96{
-  max-height: 24rem;
+.max-h-40{
+  max-height: 10rem;
 }
 
 .max-h-56{
   max-height: 14rem;
 }
 
-.max-h-40{
-  max-height: 10rem;
+.max-h-96{
+  max-height: 24rem;
+}
+
+.max-h-full{
+  max-height: 100%;
 }
 
 .min-h-screen{
@@ -1214,14 +1214,6 @@ img {
   width: 3.5rem;
 }
 
-.w-3\/4{
-  width: 75%;
-}
-
-.w-1\/3{
-  width: 33.333333%;
-}
-
 .w-72{
   width: 18rem;
 }
@@ -1230,16 +1222,24 @@ img {
   width: 5rem;
 }
 
-.w-3\/5{
-  width: 60%;
+.w-3\/4{
+  width: 75%;
+}
+
+.w-1\/3{
+  width: 33.333333%;
+}
+
+.w-1\/2{
+  width: 50%;
 }
 
 .w-96{
   width: 24rem;
 }
 
-.w-1\/2{
-  width: 50%;
+.w-3\/5{
+  width: 60%;
 }
 
 .w-12{
@@ -1262,12 +1262,12 @@ img {
   width: 1.25rem;
 }
 
-.w-40{
-  width: 10rem;
-}
-
 .w-24{
   width: 6rem;
+}
+
+.w-40{
+  width: 10rem;
 }
 
 .min-w-full{
@@ -1278,12 +1278,12 @@ img {
   min-width: 1000px;
 }
 
-.max-w-sm{
-  max-width: 24rem;
-}
-
 .max-w-full{
   max-width: 100%;
+}
+
+.max-w-sm{
+  max-width: 24rem;
 }
 
 .flex-none{
@@ -1426,14 +1426,6 @@ img {
   justify-content: space-between;
 }
 
-.gap-10{
-  gap: 2.5rem;
-}
-
-.gap-4{
-  gap: 1rem;
-}
-
 .gap-2{
   gap: 0.5rem;
 }
@@ -1442,12 +1434,16 @@ img {
   gap: 5rem;
 }
 
-.gap-12{
-  gap: 3rem;
+.gap-4{
+  gap: 1rem;
 }
 
-.gap-6{
-  gap: 1.5rem;
+.gap-10{
+  gap: 2.5rem;
+}
+
+.gap-12{
+  gap: 3rem;
 }
 
 .gap-5{
@@ -1462,12 +1458,12 @@ img {
   gap: 2rem;
 }
 
-.gap-7{
-  gap: 1.75rem;
-}
-
 .gap-1{
   gap: 0.25rem;
+}
+
+.gap-7{
+  gap: 1.75rem;
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]){
@@ -1517,16 +1513,16 @@ img {
   white-space: nowrap;
 }
 
-.rounded-lg{
-  border-radius: 0.5rem;
+.rounded-2xl{
+  border-radius: 1rem;
 }
 
 .rounded{
   border-radius: 0.25rem;
 }
 
-.rounded-2xl{
-  border-radius: 1rem;
+.rounded-lg{
+  border-radius: 0.5rem;
 }
 
 .rounded-full{
@@ -1590,12 +1586,12 @@ img {
   border-right-width: 1px;
 }
 
-.border-b-2{
-  border-bottom-width: 2px;
-}
-
 .border-t-2{
   border-top-width: 2px;
+}
+
+.border-b-2{
+  border-bottom-width: 2px;
 }
 
 .border-l-2{
@@ -1625,14 +1621,14 @@ img {
   border-color: rgb(59 130 246 / var(--tw-border-opacity));
 }
 
-.border-gray-200{
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
-}
-
 .border-red-400{
   --tw-border-opacity: 1;
   border-color: rgb(248 113 113 / var(--tw-border-opacity));
+}
+
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .border-zinc-700{
@@ -1664,6 +1660,11 @@ img {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-blue-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+
 .bg-gray-50{
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -1679,11 +1680,6 @@ img {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
-.bg-blue-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-
 .bg-sky-500{
   --tw-bg-opacity: 1;
   background-color: rgb(14 165 233 / var(--tw-bg-opacity));
@@ -1694,6 +1690,14 @@ img {
   background-color: rgb(253 186 116 / var(--tw-bg-opacity));
 }
 
+.bg-black\/50{
+  background-color: rgb(0 0 0 / 0.5);
+}
+
+.bg-black\/70{
+  background-color: rgb(0 0 0 / 0.7);
+}
+
 .bg-zinc-900{
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity));
@@ -1702,10 +1706,6 @@ img {
 .bg-zinc-800{
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity));
-}
-
-.bg-black\/70{
-  background-color: rgb(0 0 0 / 0.7);
 }
 
 .bg-red-100{
@@ -1737,16 +1737,6 @@ img {
   background-color: rgb(17 24 39 / 0.5);
 }
 
-.bg-slate-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
-}
-
-.bg-sky-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 249 255 / var(--tw-bg-opacity));
-}
-
 .bg-slate-100{
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
@@ -1760,6 +1750,24 @@ img {
 .bg-sky-100{
   --tw-bg-opacity: 1;
   background-color: rgb(224 242 254 / var(--tw-bg-opacity));
+}
+
+.bg-sky-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 249 255 / var(--tw-bg-opacity));
+}
+
+.bg-slate-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+
+.bg-black\/90{
+  background-color: rgb(0 0 0 / 0.9);
+}
+
+.bg-black\/80{
+  background-color: rgb(0 0 0 / 0.8);
 }
 
 .object-contain{
@@ -1796,17 +1804,20 @@ img {
   padding: 0px;
 }
 
-.p-2{
-  padding: 0.5rem;
-}
-
 .p-1{
   padding: 0.25rem;
 }
 
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.p-2{
+  padding: 0.5rem;
+}
+
+.p-10{
+  padding: 2.5rem;
+}
+
+.p-20{
+  padding: 5rem;
 }
 
 .py-4{
@@ -1814,39 +1825,9 @@ img {
   padding-bottom: 1rem;
 }
 
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-}
-
-.px-10{
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
-.py-10{
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-24{
-  padding-top: 6rem;
-  padding-bottom: 6rem;
 }
 
 .py-1{
@@ -1854,19 +1835,24 @@ img {
   padding-bottom: 0.25rem;
 }
 
-.px-6{
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-16{
   padding-top: 4rem;
   padding-bottom: 4rem;
+}
+
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .px-1{
@@ -1882,6 +1868,36 @@ img {
 .py-0{
   padding-top: 0px;
   padding-bottom: 0px;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.py-24{
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .px-2{
@@ -1904,16 +1920,16 @@ img {
   padding-bottom: 0.625rem;
 }
 
+.pb-3{
+  padding-bottom: 0.75rem;
+}
+
 .pb-4{
   padding-bottom: 1rem;
 }
 
 .pt-4{
   padding-top: 1rem;
-}
-
-.pb-3{
-  padding-bottom: 0.75rem;
 }
 
 .pt-3{
@@ -1924,28 +1940,12 @@ img {
   padding-bottom: 0.5rem;
 }
 
-.pl-4{
-  padding-left: 1rem;
-}
-
-.pt-10{
-  padding-top: 2.5rem;
-}
-
-.pb-8{
-  padding-bottom: 2rem;
-}
-
 .pt-2{
   padding-top: 0.5rem;
 }
 
-.pt-8{
-  padding-top: 2rem;
-}
-
-.pb-6{
-  padding-bottom: 1.5rem;
+.pl-4{
+  padding-left: 1rem;
 }
 
 .pt-28{
@@ -1958,6 +1958,22 @@ img {
 
 .pt-6{
   padding-top: 1.5rem;
+}
+
+.pt-10{
+  padding-top: 2.5rem;
+}
+
+.pb-8{
+  padding-bottom: 2rem;
+}
+
+.pt-8{
+  padding-top: 2rem;
+}
+
+.pb-6{
+  padding-bottom: 1.5rem;
 }
 
 .pt-1{
@@ -1980,10 +1996,6 @@ img {
   padding-right: 1.25rem;
 }
 
-.pl-11{
-  padding-left: 2.75rem;
-}
-
 .pr-9{
   padding-right: 2.25rem;
 }
@@ -1994,6 +2006,14 @@ img {
 
 .pr-4{
   padding-right: 1rem;
+}
+
+.pl-11{
+  padding-left: 2.75rem;
+}
+
+.pt-14{
+  padding-top: 3.5rem;
 }
 
 .text-left{
@@ -2016,19 +2036,9 @@ img {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 
 .text-sm{
@@ -2036,24 +2046,9 @@ img {
   line-height: 1.25rem;
 }
 
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-xs{
@@ -2061,20 +2056,45 @@ img {
   line-height: 1rem;
 }
 
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .font-medium{
   font-weight: 500;
 }
 
-.font-semibold{
-  font-weight: 600;
+.font-normal{
+  font-weight: 400;
 }
 
 .font-light{
   font-weight: 300;
 }
 
-.font-normal{
-  font-weight: 400;
+.font-semibold{
+  font-weight: 600;
 }
 
 .font-thin{
@@ -2089,9 +2109,9 @@ img {
   letter-spacing: 0.05em;
 }
 
-.text-zinc-800{
+.text-zinc-600{
   --tw-text-opacity: 1;
-  color: rgb(39 39 42 / var(--tw-text-opacity));
+  color: rgb(82 82 91 / var(--tw-text-opacity));
 }
 
 .text-white{
@@ -2099,39 +2119,29 @@ img {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-zinc-400{
-  --tw-text-opacity: 1;
-  color: rgb(161 161 170 / var(--tw-text-opacity));
-}
-
 .text-zinc-700{
   --tw-text-opacity: 1;
   color: rgb(63 63 70 / var(--tw-text-opacity));
 }
 
+.text-blue-600{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.text-zinc-800{
+  --tw-text-opacity: 1;
+  color: rgb(39 39 42 / var(--tw-text-opacity));
+}
+
+.text-zinc-400{
+  --tw-text-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-text-opacity));
+}
+
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.text-orange-500{
-  --tw-text-opacity: 1;
-  color: rgb(249 115 22 / var(--tw-text-opacity));
-}
-
-.text-gray-600{
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
-.text-gray-900{
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
-.text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-zinc-900{
@@ -2174,19 +2184,29 @@ img {
   color: rgb(22 163 74 / var(--tw-text-opacity));
 }
 
-.text-zinc-600{
+.text-orange-500{
   --tw-text-opacity: 1;
-  color: rgb(82 82 91 / var(--tw-text-opacity));
-}
-
-.text-blue-600{
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
+  color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 
 .text-red-400{
   --tw-text-opacity: 1;
   color: rgb(248 113 113 / var(--tw-text-opacity));
+}
+
+.text-gray-600{
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.text-gray-900{
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-slate-50{
@@ -2224,24 +2244,14 @@ img {
   color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
 }
 
-.text-gray-400{
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
-.text-sky-500{
-  --tw-text-opacity: 1;
-  color: rgb(14 165 233 / var(--tw-text-opacity));
-}
-
 .text-green-500{
   --tw-text-opacity: 1;
   color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
-.text-gray-300{
+.text-sky-500{
   --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
+  color: rgb(14 165 233 / var(--tw-text-opacity));
 }
 
 .text-yellow-800{
@@ -2257,6 +2267,16 @@ img {
 .text-green-700{
   --tw-text-opacity: 1;
   color: rgb(21 128 61 / var(--tw-text-opacity));
+}
+
+.text-gray-300{
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+.text-gray-400{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -2379,12 +2399,12 @@ img {
   transition-duration: 150ms;
 }
 
-.duration-300{
-  transition-duration: 300ms;
-}
-
 .duration-500{
   transition-duration: 500ms;
+}
+
+.duration-300{
+  transition-duration: 300ms;
 }
 
 .duration-1000{
@@ -2523,19 +2543,14 @@ img {
   background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-slate-300:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-gray-50:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
-.hover\:text-blue-700:hover{
-  --tw-text-opacity: 1;
-  color: rgb(29 78 216 / var(--tw-text-opacity));
+.hover\:bg-slate-300:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
 }
 
 .hover\:text-blue-600:hover{
@@ -2543,14 +2558,19 @@ img {
   color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
+.hover\:text-blue-700:hover{
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
+}
+
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.hover\:text-gray-600:hover{
+.hover\:text-sky-600:hover{
   --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
+  color: rgb(2 132 199 / var(--tw-text-opacity));
 }
 
 .hover\:text-gray-500:hover{
@@ -2558,9 +2578,9 @@ img {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
-.hover\:text-sky-600:hover{
+.hover\:text-gray-600:hover{
   --tw-text-opacity: 1;
-  color: rgb(2 132 199 / var(--tw-text-opacity));
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover{
@@ -2811,16 +2831,6 @@ img {
     padding: 1.75rem;
   }
 
-  .lg\:py-12{
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-  }
-
-  .lg\:px-10{
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-
   .lg\:py-3{
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
@@ -2829,6 +2839,16 @@ img {
   .lg\:py-8{
     padding-top: 2rem;
     padding-bottom: 2rem;
+  }
+
+  .lg\:py-12{
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+
+  .lg\:px-10{
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 
   .lg\:pt-0{
@@ -2843,14 +2863,14 @@ img {
     text-align: left;
   }
 
-  .lg\:text-4xl{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
   .lg\:text-3xl{
     font-size: 1.875rem;
     line-height: 2.25rem;
+  }
+
+  .lg\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .lg\:text-2xl{
